@@ -1,35 +1,29 @@
 import java.util.ArrayList;
 import java.util.List;
-
-/**
- * Lab: JVM Memory Analysis
- * 
- * TODO: Complete this application to demonstrate memory behavior
- * 
- * Run with: java -Xms128m -Xmx256m -Xlog:gc*:file=gc.log MemoryLabApp
- */
 public class MemoryLabApp {
+
+    private static final int ONE_MB = 1024 * 1024;
 
     public static void main(String[] args) throws InterruptedException {
         System.out.println("=== JVM Memory Lab ===");
         printMemoryStatus("Initial");
-
         List<byte[]> memoryBlocks = new ArrayList<>();
-
-        // TODO: Implement the following
-        // 1. Allocate memory in a loop (e.g., 1MB chunks)
-        // 2. Print memory status after each allocation
-        // 3. Handle OutOfMemoryError gracefully
-        // 4. Add a small delay between allocations for observation
-
-        // Your code here:
-
+        int allocationCount = 0;
+        try {
+            while (true) {
+                memoryBlocks.add(new byte[ONE_MB]);
+                allocationCount++;
+                printMemoryStatus("After allocation " + allocationCount + " MB");
+                Thread.sleep(500);
+            }
+        } catch (OutOfMemoryError e) {
+            System.err.println("\nYou are out of memory.");
+            System.err.println("Allocated approximately " + allocationCount + " MB");
+            printMemoryStatus("At OOM");
+        }
         printMemoryStatus("Final");
     }
 
-    /**
-     * Helper method to print current memory status
-     */
     private static void printMemoryStatus(String label) {
         Runtime runtime = Runtime.getRuntime();
         long maxMemory = runtime.maxMemory() / (1024 * 1024);
